src/aguda-cabal/aguda/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declaration declarations
Rule 3     declarations -> declaration
Rule 4     declaration -> LET ID LPAREN params RPAREN COLON type ASSIGN fun_body
Rule 5     declaration -> LET ID COLON type ASSIGN var_body
Rule 6     var_body -> expression
Rule 7     var_body -> block
Rule 8     var_body -> statement_list
Rule 9     fun_body -> statement_list
Rule 10    fun_body -> block
Rule 11    block -> LPAREN statement_list RPAREN
Rule 12    statement_list -> statement SEMICOLON statement_list
Rule 13    statement_list -> statement_no_semicolon
Rule 14    statement -> declaration
Rule 15    statement -> command
Rule 16    statement -> expression
Rule 17    statement_no_semicolon -> declaration
Rule 18    statement_no_semicolon -> command
Rule 19    statement_no_semicolon -> expression
Rule 20    params -> param_list
Rule 21    params -> empty
Rule 22    param_list -> ID COMMA param_list
Rule 23    param_list -> ID
Rule 24    type -> ID
Rule 25    type -> type LBRACK RBRACK
Rule 26    type -> type ARROW type
Rule 27    type -> LPAREN type_list RPAREN
Rule 28    type_list -> type COMMA type_list
Rule 29    type_list -> type
Rule 30    command -> WHILE expression DO simple_expr
Rule 31    command -> WHILE expression DO block
Rule 32    command -> SET lvalue ASSIGN expression
Rule 33    simple_expr -> command
Rule 34    simple_expr -> expression
Rule 35    expression -> IF expression THEN simple_expr
Rule 36    expression -> IF expression THEN block
Rule 37    expression -> IF expression THEN LPAREN statement_list RPAREN
Rule 38    expression -> IF expression THEN simple_expr ELSE simple_expr
Rule 39    expression -> IF expression THEN simple_expr ELSE block
Rule 40    expression -> IF expression THEN simple_expr ELSE LPAREN statement_list RPAREN
Rule 41    expression -> IF expression THEN block ELSE simple_expr
Rule 42    expression -> IF expression THEN block ELSE block
Rule 43    expression -> IF expression THEN block ELSE LPAREN statement_list RPAREN
Rule 44    expression -> IF expression THEN LPAREN statement_list RPAREN ELSE simple_expr
Rule 45    expression -> IF expression THEN LPAREN statement_list RPAREN ELSE block
Rule 46    expression -> IF expression THEN LPAREN statement_list RPAREN ELSE LPAREN statement_list RPAREN
Rule 47    expression -> expression PLUS expression
Rule 48    expression -> expression MINUS expression
Rule 49    expression -> expression TIMES expression
Rule 50    expression -> expression DIVIDE expression
Rule 51    expression -> expression MOD expression
Rule 52    expression -> expression POW expression
Rule 53    expression -> expression EQ expression
Rule 54    expression -> expression NEQ expression
Rule 55    expression -> expression LT expression
Rule 56    expression -> expression LE expression
Rule 57    expression -> expression GT expression
Rule 58    expression -> expression GE expression
Rule 59    expression -> expression AND expression
Rule 60    expression -> expression OR expression
Rule 61    expression -> MINUS expression
Rule 62    expression -> NOT expression
Rule 63    expression -> LPAREN command RPAREN
Rule 64    expression -> INT_LITERAL
Rule 65    expression -> STRING_LITERAL
Rule 66    expression -> TRUE
Rule 67    expression -> FALSE
Rule 68    expression -> UNIT
Rule 69    expression -> NULL
Rule 70    expression -> LPAREN expression RPAREN
Rule 71    expression -> ID LPAREN args RPAREN
Rule 72    args -> expression COMMA args
Rule 73    args -> expression
Rule 74    expression -> NEW type LBRACK expression PIPE expression RBRACK
Rule 75    expression -> NEW type LBRACK expression PIPE command RBRACK
Rule 76    expression -> expression LBRACK expression RBRACK
Rule 77    expression -> ID
Rule 78    lvalue -> ID
Rule 79    lvalue -> lvalue LBRACK expression RBRACK
Rule 80    empty -> <empty>

Terminals, with rules where they appear

AND                  : 59
ARROW                : 26
ASSIGN               : 4 5 32
COLON                : 4 5
COMMA                : 22 28 72
DIVIDE               : 50
DO                   : 30 31
ELSE                 : 38 39 40 41 42 43 44 45 46
EQ                   : 53
FALSE                : 67
GE                   : 58
GT                   : 57
ID                   : 4 5 22 23 24 71 77 78
IF                   : 35 36 37 38 39 40 41 42 43 44 45 46
INT_LITERAL          : 64
LBRACK               : 25 74 75 76 79
LE                   : 56
LET                  : 4 5
LPAREN               : 4 11 27 37 40 43 44 45 46 46 63 70 71
LT                   : 55
MINUS                : 48 61
MOD                  : 51
NEQ                  : 54
NEW                  : 74 75
NOT                  : 62
NULL                 : 69
OR                   : 60
PIPE                 : 74 75
PLUS                 : 47
POW                  : 52
RBRACK               : 25 74 75 76 79
RPAREN               : 4 11 27 37 40 43 44 45 46 46 63 70 71
SEMICOLON            : 12
SET                  : 32
STRING_LITERAL       : 65
THEN                 : 35 36 37 38 39 40 41 42 43 44 45 46
TIMES                : 49
TRUE                 : 66
UNIT                 : 68
WHILE                : 30 31
error                : 

Nonterminals, with rules where they appear

args                 : 71 72
block                : 7 10 31 36 39 41 42 42 43 45
command              : 15 18 33 63 75
declaration          : 2 3 14 17
declarations         : 1 2
empty                : 21
expression           : 6 16 19 30 31 32 34 35 36 37 38 39 40 41 42 43 44 45 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 62 70 72 73 74 74 75 76 76 79
fun_body             : 4
lvalue               : 32 79
param_list           : 20 22
params               : 4
program              : 0
simple_expr          : 30 35 38 38 39 40 41 44
statement            : 12
statement_list       : 8 9 11 12 37 40 43 44 45 46 46
statement_no_semicolon : 13
type                 : 4 5 25 26 26 28 29 74 75
type_list            : 27 28
var_body             : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declaration declarations
    (3) declarations -> . declaration
    (4) declaration -> . LET ID LPAREN params RPAREN COLON type ASSIGN fun_body
    (5) declaration -> . LET ID COLON type ASSIGN var_body

    LET             shift and go to state 4

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    declaration                    shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations .

    $end            reduce using rule 1 (program -> declarations .)


state 3

    (2) declarations -> declaration . declarations
    (3) declarations -> declaration .
    (2) declarations -> . declaration declarations
    (3) declarations -> . declaration
    (4) declaration -> . LET ID LPAREN params RPAREN COLON type ASSIGN fun_body
    (5) declaration -> . LET ID COLON type ASSIGN var_body

    $end            reduce using rule 3 (declarations -> declaration .)
    LET             shift and go to state 4

    declaration                    shift and go to state 3
    declarations                   shift and go to state 5

state 4

    (4) declaration -> LET . ID LPAREN params RPAREN COLON type ASSIGN fun_body
    (5) declaration -> LET . ID COLON type ASSIGN var_body

    ID              shift and go to state 6


state 5

    (2) declarations -> declaration declarations .

    $end            reduce using rule 2 (declarations -> declaration declarations .)


state 6

    (4) declaration -> LET ID . LPAREN params RPAREN COLON type ASSIGN fun_body
    (5) declaration -> LET ID . COLON type ASSIGN var_body

    LPAREN          shift and go to state 7
    COLON           shift and go to state 8


state 7

    (4) declaration -> LET ID LPAREN . params RPAREN COLON type ASSIGN fun_body
    (20) params -> . param_list
    (21) params -> . empty
    (22) param_list -> . ID COMMA param_list
    (23) param_list -> . ID
    (80) empty -> .

    ID              shift and go to state 9
    RPAREN          reduce using rule 80 (empty -> .)

    params                         shift and go to state 10
    param_list                     shift and go to state 11
    empty                          shift and go to state 12

state 8

    (5) declaration -> LET ID COLON . type ASSIGN var_body
    (24) type -> . ID
    (25) type -> . type LBRACK RBRACK
    (26) type -> . type ARROW type
    (27) type -> . LPAREN type_list RPAREN

    ID              shift and go to state 13
    LPAREN          shift and go to state 15

    type                           shift and go to state 14

state 9

    (22) param_list -> ID . COMMA param_list
    (23) param_list -> ID .

    COMMA           shift and go to state 16
    RPAREN          reduce using rule 23 (param_list -> ID .)


state 10

    (4) declaration -> LET ID LPAREN params . RPAREN COLON type ASSIGN fun_body

    RPAREN          shift and go to state 17


state 11

    (20) params -> param_list .

    RPAREN          reduce using rule 20 (params -> param_list .)


state 12

    (21) params -> empty .

    RPAREN          reduce using rule 21 (params -> empty .)


state 13

    (24) type -> ID .

    ASSIGN          reduce using rule 24 (type -> ID .)
    LBRACK          reduce using rule 24 (type -> ID .)
    ARROW           reduce using rule 24 (type -> ID .)
    COMMA           reduce using rule 24 (type -> ID .)
    RPAREN          reduce using rule 24 (type -> ID .)


state 14

    (5) declaration -> LET ID COLON type . ASSIGN var_body
    (25) type -> type . LBRACK RBRACK
    (26) type -> type . ARROW type

    ASSIGN          shift and go to state 18
    LBRACK          shift and go to state 19
    ARROW           shift and go to state 20


state 15

    (27) type -> LPAREN . type_list RPAREN
    (28) type_list -> . type COMMA type_list
    (29) type_list -> . type
    (24) type -> . ID
    (25) type -> . type LBRACK RBRACK
    (26) type -> . type ARROW type
    (27) type -> . LPAREN type_list RPAREN

    ID              shift and go to state 13
    LPAREN          shift and go to state 15

    type_list                      shift and go to state 21
    type                           shift and go to state 22

state 16

    (22) param_list -> ID COMMA . param_list
    (22) param_list -> . ID COMMA param_list
    (23) param_list -> . ID

    ID              shift and go to state 9

    param_list                     shift and go to state 23

state 17

    (4) declaration -> LET ID LPAREN params RPAREN . COLON type ASSIGN fun_body

    COLON           shift and go to state 24


state 18

    (5) declaration -> LET ID COLON type ASSIGN . var_body
    (6) var_body -> . expression
    (7) var_body -> . block
    (8) var_body -> . statement_list
    (35) expression -> . IF expression THEN simple_expr
    (36) expression -> . IF expression THEN block
    (37) expression -> . IF expression THEN LPAREN statement_list RPAREN
    (38) expression -> . IF expression THEN simple_expr ELSE simple_expr
    (39) expression -> . IF expression THEN simple_expr ELSE block
    (40) expression -> . IF expression THEN simple_expr ELSE LPAREN statement_list RPAREN
    (41) expression -> . IF expression THEN block ELSE simple_expr
    (42) expression -> . IF expression THEN block ELSE block
    (43) expression -> . IF expression THEN block ELSE LPAREN statement_list RPAREN
    (44) expression -> . IF expression THEN LPAREN statement_list RPAREN ELSE simple_expr
    (45) expression -> . IF expression THEN LPAREN statement_list RPAREN ELSE block
    (46) expression -> . IF expression THEN LPAREN statement_list RPAREN ELSE LPAREN statement_list RPAREN
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression TIMES expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression POW expression
    (53) expression -> . expression EQ expression
    (54) expression -> . expression NEQ expression
    (55) expression -> . expression LT expression
    (56) expression -> . expression LE expression
    (57) expression -> . expression GT expression
    (58) expression -> . expression GE expression
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . MINUS expression
    (62) expression -> . NOT expression
    (63) expression -> . LPAREN command RPAREN
    (64) expression -> . INT_LITERAL
    (65) expression -> . STRING_LITERAL
    (66) expression -> . TRUE
    (67) expression -> . FALSE
    (68) expression -> . UNIT
    (69) expression -> . NULL
    (70) expression -> . LPAREN expression RPAREN
    (71) expression -> . ID LPAREN args RPAREN
    (74) expression -> . NEW type LBRACK expression PIPE expression RBRACK
    (75) expression -> . NEW type LBRACK expression PIPE command RBRACK
    (76) expression -> . expression LBRACK expression RBRACK
    (77) expression -> . ID
    (11) block -> . LPAREN statement_list RPAREN
    (12) statement_list -> . statement SEMICOLON statement_list
    (13) statement_list -> . statement_no_semicolon
    (14) statement -> . declaration
    (15) statement -> . command
    (16) statement -> . expression
    (17) statement_no_semicolon -> . declaration
    (18) statement_no_semicolon -> . command
    (19) statement_no_semicolon -> . expression
    (4) declaration -> . LET ID LPAREN params RPAREN COLON type ASSIGN fun_body
    (5) declaration -> . LET ID COLON type ASSIGN var_body
    (30) command -> . WHILE expression DO simple_expr
    (31) command -> . WHILE expression DO block
    (32) command -> . SET lvalue ASSIGN expression

    IF              shift and go to state 30
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    LPAREN          shift and go to state 31
    INT_LITERAL     shift and go to state 35
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    UNIT            shift and go to state 39
    NULL            shift and go to state 40
    ID              shift and go to state 25
    NEW             shift and go to state 41
    LET             shift and go to state 4
    WHILE           shift and go to state 45
    SET             shift and go to state 46

    var_body                       shift and go to state 26
    expression                     shift and go to state 27
    block                          shift and go to state 28
    statement_list                 shift and go to state 29
    command                        shift and go to state 34
    statement                      shift and go to state 42
    statement_no_semicolon         shift and go to state 43
    declaration                    shift and go to state 44

state 19

    (25) type -> type LBRACK . RBRACK

    RBRACK          shift and go to state 47


state 20

    (26) type -> type ARROW . type
    (24) type -> . ID
    (25) type -> . type LBRACK RBRACK
    (26) type -> . type ARROW type
    (27) type -> . LPAREN type_list RPAREN

    ID              shift and go to state 13
    LPAREN          shift and go to state 15

    type                           shift and go to state 48

state 21

    (27) type -> LPAREN type_list . RPAREN

    RPAREN          shift and go to state 49


state 22

    (28) type_list -> type . COMMA type_list
    (29) type_list -> type .
    (25) type -> type . LBRACK RBRACK
    (26) type -> type . ARROW type

    COMMA           shift and go to state 50
    RPAREN          reduce using rule 29 (type_list -> type .)
    LBRACK          shift and go to state 19
    ARROW           shift and go to state 20


state 23

    (22) param_list -> ID COMMA param_list .

    RPAREN          reduce using rule 22 (param_list -> ID COMMA param_list .)


state 24

    (4) declaration -> LET ID LPAREN params RPAREN COLON . type ASSIGN fun_body
    (24) type -> . ID
    (25) type -> . type LBRACK RBRACK
    (26) type -> . type ARROW type
    (27) type -> . LPAREN type_list RPAREN

    ID              shift and go to state 13
    LPAREN          shift and go to state 15

    type                           shift and go to state 51

state 25

    (71) expression -> ID . LPAREN args RPAREN
    (77) expression -> ID .

    LPAREN          shift and go to state 52
    PLUS            reduce using rule 77 (expression -> ID .)
    MINUS           reduce using rule 77 (expression -> ID .)
    TIMES           reduce using rule 77 (expression -> ID .)
    DIVIDE          reduce using rule 77 (expression -> ID .)
    MOD             reduce using rule 77 (expression -> ID .)
    POW             reduce using rule 77 (expression -> ID .)
    EQ              reduce using rule 77 (expression -> ID .)
    NEQ             reduce using rule 77 (expression -> ID .)
    LT              reduce using rule 77 (expression -> ID .)
    LE              reduce using rule 77 (expression -> ID .)
    GT              reduce using rule 77 (expression -> ID .)
    GE              reduce using rule 77 (expression -> ID .)
    AND             reduce using rule 77 (expression -> ID .)
    OR              reduce using rule 77 (expression -> ID .)
    LBRACK          reduce using rule 77 (expression -> ID .)
    LET             reduce using rule 77 (expression -> ID .)
    $end            reduce using rule 77 (expression -> ID .)
    SEMICOLON       reduce using rule 77 (expression -> ID .)
    RPAREN          reduce using rule 77 (expression -> ID .)
    THEN            reduce using rule 77 (expression -> ID .)
    DO              reduce using rule 77 (expression -> ID .)
    COMMA           reduce using rule 77 (expression -> ID .)
    RBRACK          reduce using rule 77 (expression -> ID .)
    ELSE            reduce using rule 77 (expression -> ID .)
    PIPE            reduce using rule 77 (expression -> ID .)


state 26

    (5) declaration -> LET ID COLON type ASSIGN var_body .

    LET             reduce using rule 5 (declaration -> LET ID COLON type ASSIGN var_body .)
    $end            reduce using rule 5 (declaration -> LET ID COLON type ASSIGN var_body .)
    SEMICOLON       reduce using rule 5 (declaration -> LET ID COLON type ASSIGN var_body .)
    RPAREN          reduce using rule 5 (declaration -> LET ID COLON type ASSIGN var_body .)


state 27

    (6) var_body -> expression .
    (47) expression -> expression . PLUS expression
    (48) expression -> expression . MINUS expression
    (49) expression -> expression . TIMES expression
    (50) expression -> expression . DIVIDE expression
    (51) expression -> expression . MOD expression
    (52) expression -> expression . POW expression
    (53) expression -> expression . EQ expression
    (54) expression -> expression . NEQ expression
    (55) expression -> expression . LT expression
    (56) expression -> expression . LE expression
    (57) expression -> expression . GT expression
    (58) expression -> expression . GE expression
    (59) expression -> expression . AND expression
    (60) expression -> expression . OR expression
    (76) expression -> expression . LBRACK expression RBRACK
    (16) statement -> expression .
    (19) statement_no_semicolon -> expression .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 6 (var_body -> expression .)
  ! reduce/reduce conflict for LET resolved using rule 6 (var_body -> expression .)
  ! reduce/reduce conflict for $end resolved using rule 6 (var_body -> expression .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 6 (var_body -> expression .)
  ! reduce/reduce conflict for RPAREN resolved using rule 6 (var_body -> expression .)
    LET             reduce using rule 6 (var_body -> expression .)
    $end            reduce using rule 6 (var_body -> expression .)
    SEMICOLON       reduce using rule 6 (var_body -> expression .)
    RPAREN          reduce using rule 6 (var_body -> expression .)
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    TIMES           shift and go to state 55
    DIVIDE          shift and go to state 56
    MOD             shift and go to state 57
    POW             shift and go to state 58
    EQ              shift and go to state 59
    NEQ             shift and go to state 60
    LT              shift and go to state 61
    LE              shift and go to state 62
    GT              shift and go to state 63
    GE              shift and go to state 64
    AND             shift and go to state 65
    OR              shift and go to state 66
    LBRACK          shift and go to state 67

  ! SEMICOLON       [ reduce using rule 16 (statement -> expression .) ]
  ! LET             [ reduce using rule 19 (statement_no_semicolon -> expression .) ]
  ! $end            [ reduce using rule 19 (statement_no_semicolon -> expression .) ]
  ! SEMICOLON       [ reduce using rule 19 (statement_no_semicolon -> expression .) ]
  ! RPAREN          [ reduce using rule 19 (statement_no_semicolon -> expression .) ]


state 28

    (7) var_body -> block .

    LET             reduce using rule 7 (var_body -> block .)
    $end            reduce using rule 7 (var_body -> block .)
    SEMICOLON       reduce using rule 7 (var_body -> block .)
    RPAREN          reduce using rule 7 (var_body -> block .)


state 29

    (8) var_body -> statement_list .

    LET             reduce using rule 8 (var_body -> statement_list .)
    $end            reduce using rule 8 (var_body -> statement_list .)
    SEMICOLON       reduce using rule 8 (var_body -> statement_list .)
    RPAREN          reduce using rule 8 (var_body -> statement_list .)


state 30

    (35) expression -> IF . expression THEN simple_expr
    (36) expression -> IF . expression THEN block
    (37) expression -> IF . expression THEN LPAREN statement_list RPAREN
    (38) expression -> IF . expression THEN simple_expr ELSE simple_expr
    (39) expression -> IF . expression THEN simple_expr ELSE block
    (40) expression -> IF . expression THEN simple_expr ELSE LPAREN statement_list RPAREN
    (41) expression -> IF . expression THEN block ELSE simple_expr
    (42) expression -> IF . expression THEN block ELSE block
    (43) expression -> IF . expression THEN block ELSE LPAREN statement_list RPAREN
    (44) expression -> IF . expression THEN LPAREN statement_list RPAREN ELSE simple_expr
    (45) expression -> IF . expression THEN LPAREN statement_list RPAREN ELSE block
    (46) expression -> IF . expression THEN LPAREN statement_list RPAREN ELSE LPAREN statement_list RPAREN
    (35) expression -> . IF expression THEN simple_expr
    (36) expression -> . IF expression THEN block
    (37) expression -> . IF expression THEN LPAREN statement_list RPAREN
    (38) expression -> . IF expression THEN simple_expr ELSE simple_expr
    (39) expression -> . IF expression THEN simple_expr ELSE block
    (40) expression -> . IF expression THEN simple_expr ELSE LPAREN statement_list RPAREN
    (41) expression -> . IF expression THEN block ELSE simple_expr
    (42) expression -> . IF expression THEN block ELSE block
    (43) expression -> . IF expression THEN block ELSE LPAREN statement_list RPAREN
    (44) expression -> . IF expression THEN LPAREN statement_list RPAREN ELSE simple_expr
    (45) expression -> . IF expression THEN LPAREN statement_list RPAREN ELSE block
    (46) expression -> . IF expression THEN LPAREN statement_list RPAREN ELSE LPAREN statement_list RPAREN
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression TIMES expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression POW expression
    (53) expression -> . expression EQ expression
    (54) expression -> . expression NEQ expression
    (55) expression -> . expression LT expression
    (56) expression -> . expression LE expression
    (57) expression -> . expression GT expression
    (58) expression -> . expression GE expression
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . MINUS expression
    (62) expression -> . NOT expression
    (63) expression -> . LPAREN command RPAREN
    (64) expression -> . INT_LITERAL
    (65) expression -> . STRING_LITERAL
    (66) expression -> . TRUE
    (67) expression -> . FALSE
    (68) expression -> . UNIT
    (69) expression -> . NULL
    (70) expression -> . LPAREN expression RPAREN
    (71) expression -> . ID LPAREN args RPAREN
    (74) expression -> . NEW type LBRACK expression PIPE expression RBRACK
    (75) expression -> . NEW type LBRACK expression PIPE command RBRACK
    (76) expression -> . expression LBRACK expression RBRACK
    (77) expression -> . ID

    IF              shift and go to state 30
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    LPAREN          shift and go to state 69
    INT_LITERAL     shift and go to state 35
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    UNIT            shift and go to state 39
    NULL            shift and go to state 40
    ID              shift and go to state 25
    NEW             shift and go to state 41

    expression                     shift and go to state 68

state 31
